feat: created Menu class, fixed bug in SplashActivity, added menu images, and made layout adjustments

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,17 +12,21 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Mathrix"
         tools:targetApi="31">
+
         <activity
-            android:name=".Menu"
+            android:name=".SplashActivity"
             android:exported="true"
-            android:label="@string/app_name"
-            tools:ignore="WrongManifestParent">
+            android:label="@string/app_name">
+
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <activity android:name=".Menu" />
+
         <meta-data
             android:name="preloaded_fonts"
             android:resource="@array/preloaded_fonts" />
