--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,7 +25,9 @@
             </intent-filter>
         </activity>
 
-        <activity android:name=".Menu" />
+        <activity android:name=".Menu2" />
+        <activity android:name=".Menu3" />
+        <activity android:name=".Game" />
 
         <meta-data
             android:name="preloaded_fonts"
