--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,8 +25,9 @@
             </intent-filter>
         </activity>
 
-        <activity android:name=".Menu2" />
-        <activity android:name=".Menu3" />
+        <activity android:name=".Menu" />
+        <activity android:name=".PlayOrLearn" />
+        <activity android:name=".Learn" />
         <activity android:name=".Game" />
 
         <meta-data
